# tailwind-class-sorter

./: .gitignore  .vscode-test.mjs  .vscodeignore  .yarnrc.yml  CHANGELOG.md  LICENSE  README.md  biome.jsonc  package.json  tsconfig.json
scripts/: build-wasm.js
src/: config.ts  extension.ts  formatter.ts  rustywind.ts  wasmSorter.ts
src/test/suite/: extension.test.ts  formatter.test.ts  internal-sorter.test.ts  rustywind-sorter.test.ts  rustywind.test.ts  testUtils.ts
src/utils/: classExtractor.ts  classExtractorOxc.ts  logging.ts  temp.ts  types.ts
wasm/: Cargo.toml
wasm/src/: extractor.rs  lib.rs  prefixes.rs  sorter.rs  utils.rs
